--- a/lv01/Dockerfile
+++ b/lv01/Dockerfile
@@ -1,5 +1,5 @@
 FROM centos:8
 RUN yum install -y httpd
-ADD ./index.html /var/www/html/
+COPY ./index.html /var/www/html/
 EXPOSE 80
 CMD ["/usr/sbin/httpd", "-D", "FOREGROUND"]
